--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@inertiajs/vue3": "^1.2.0",
+        "@vitejs/plugin-vue": "^5.1.4",
+        "vue": "^3.5.12"
     }
 }
